fix SwitchButton overflow

--- a/web/ui/SwitchButton.scss
+++ b/web/ui/SwitchButton.scss
@@ -43,6 +43,7 @@ $padding: 4px;
 
 .input {
 	position: absolute;
+	top: 0;
 	opacity: 0;
 	cursor: inherit;
 }
